--- a/src/saar_website/templates/saar_website/index.html
+++ b/src/saar_website/templates/saar_website/index.html
@@ -6,7 +6,7 @@
 
 {% block description %}Protégez ce qui compte avec SAAR Assurances. Assurance auto, santé, habitation et entreprise en Côte d'Ivoire. Devis gratuit en ligne.{% endblock %}
 
-{% block keywords %}assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
+{% block keywords %}SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
 
 {% block content %}
 
