--- a/src/saar_website/templates/saar_website/layouts/base.html
+++ b/src/saar_website/templates/saar_website/layouts/base.html
@@ -11,7 +11,7 @@
         </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
          <!-- Mots-clés -->
-        <meta content="{% block keywords %}assurance, assurance auto, assurance santé, assurance habitation, assurance entreprise, assurance Côte d'Ivoire, assurance Abidjan, SAAR, SAAR Assurances, SAAR CI, SAAR VIE, SAAR VIE CI, SAAR Vie Côte d'Ivoire, Top 10 marché Ivoirien{% endblock %}" name="keywords">
+        <meta content="{% block keywords %}SAAR, saar, SAAR Assurances, SAAR CI, SAAR VIE, SAAR VIE CI, SAAR Assurances Côte d'Ivoire, SAAR Assurances CI, assurance, assurance auto, assurance santé, assurance habitation, assurance entreprise, assurance Côte d'Ivoire, assurance Abidjan, SAAR Vie Côte d'Ivoire, Top 10 marché Ivoirien{% endblock %}" name="keywords">
         <!-- Description pour Google -->
         <meta name="description" content="{% block description %}SAAR Assurances CI, votre partenaire de confiance pour tous vos besoins d'assurance en Côte d'Ivoire. Devis gratuit en ligne.{% endblock %}">
 
@@ -72,7 +72,7 @@
       {
         "@context": "https://schema.org",
         "@type": "InsuranceAgency",
-        "name": "SAAR Assurances Côte d'Ivoire",
+        "name": "SAAR Assurances",
         "image": "https://saarassurancesci.com{% static 'img/logo-saar.png' %}",
         "url": "https://saarassurancesci.com",
         "telephone": "+225-27-22-50-81-50",
