--- a/src/saar_website/templates/saar_website/produits/detail.html
+++ b/src/saar_website/templates/saar_website/produits/detail.html
@@ -6,7 +6,7 @@
 
 {% block description %}{{ detail_produit.contenu|safe|truncatewords:30 }} SAAR Assurances, votre partenaire de confiance en Côte d'Ivoire.{% endblock %}
 
-{% block keywords %}{{ produit.titre }}, assurance {{ produit.categorie.libelle }}, SAAR, Côte d'Ivoire, Abidjan, devis assurance{% endblock %}
+{% block keywords %}{{ produit.titre }}, assurance {{ produit.categorie.libelle }}, SAAR, Côte d'Ivoire, Abidjan, devis assurance, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
 
 
 {% block extra_head %}
