--- a/src/saar_website/templates/saar_website/about_review.html
+++ b/src/saar_website/templates/saar_website/about_review.html
@@ -2,6 +2,11 @@
 
 {% load static %}
 
+{% block title %}SAAR Assurances Côte d'Ivoire {% endblock %}
+
+{% block keywords %} SAAR, Côte d'Ivoire, Abidjan, devis assurance, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
+
+
 {% block content %}
 
 <!-- Header Start -->
