--- a/src/saar_website/templates/saar_website/agences.html
+++ b/src/saar_website/templates/saar_website/agences.html
@@ -2,6 +2,13 @@
 
 {% load static %}
 
+{% block title %}Nos Agences | SAAR Assurances CI{% endblock %}
+
+{% block description %}Nos agences à Abidjan et à l'Intérieur.{% endblock %}
+
+{% block keywords %} Agences, Bureaux directs, Agents généraux, SAAR, Côte d'Ivoire, Abidjan, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
+
+
 {% block content %}
 
       <!-- Header Start -->
