--- a/src/saar_website/templates/saar_website/index.html
+++ b/src/saar_website/templates/saar_website/index.html
@@ -2,11 +2,11 @@
 
 {% load static %}
 
-{% block title %}SAAR Assurances CI- Leader de l'Assurance en Côte d'Ivoire | Auto, Santé, Habitation{% endblock %}
+{% block title %}SAAR Assurances CI - Assurance Auto, Santé, Habitation en Côte d'Ivoire{% endblock %}
 
-{% block description %}Protégez ce qui compte avec SAAR Assurances. Assurance auto, santé, habitation et entreprise en Côte d'Ivoire. Devis gratuit en ligne.{% endblock %}
+{% block description %}Protégez ce qui compte avec SAAR Assurances. Assurance non-vie et vie en Côte d'Ivoire.{% endblock %}
 
-{% block keywords %}SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
+{% block keywords %}SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, assurance, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
 
 {% block content %}
 
