--- a/src/saar_website/templates/saar_website/layouts/base.html
+++ b/src/saar_website/templates/saar_website/layouts/base.html
@@ -13,7 +13,7 @@
          <!-- Mots-clés -->
         <meta content="{% block keywords %}SAAR, saar, SAAR Assurances, SAAR CI, SAAR VIE, SAAR VIE CI, SAAR Assurances Côte d'Ivoire, SAAR Assurances CI, assurance, assurance auto, assurance santé, assurance habitation, assurance entreprise, assurance Côte d'Ivoire, assurance Abidjan, SAAR Vie Côte d'Ivoire, Top 10 marché Ivoirien{% endblock %}" name="keywords">
         <!-- Description pour Google -->
-        <meta name="description" content="{% block description %}SAAR Assurances CI, votre partenaire de confiance pour tous vos besoins d'assurance en Côte d'Ivoire. Devis gratuit en ligne.{% endblock %}">
+        <meta name="description" content="{% block description %}SAAR Assurances CI, votre partenaire de confiance pour tous vos besoins d'assurance en Côte d'Ivoire.{% endblock %}">
 
         <!-- Auteur et copyright -->
         <meta name="author" content="SAAR Assurances CI">
@@ -23,7 +23,7 @@
         <!-- Open Graph pour Facebook/LinkedIn -->
         <meta property="og:site_name" content="SAAR Assurances Côte d'Ivoire">
         <meta property="og:title" content="{% block og_title %}SAAR Assurances CI - Protection complète en Côte d'Ivoire{% endblock %}">
-        <meta property="og:description" content="{% block og_description %}Découvrez nos solutions d'assurance adaptées à vos besoins. Devis gratuit en ligne.{% endblock %}">
+        <meta property="og:description" content="{% block og_description %}Découvrez nos solutions d'assurance adaptées à vos besoins.{% endblock %}">
         <meta property="og:image" content="{% block og_image %}https://saarassurancesci.com{% static 'img/logo-saar.png' %}{% endblock %}">
         <meta property="og:url" content="https://saarassurancesci.com">
         <meta property="og:type" content="website">
