--- a/src/saar_website/templates/saar_website/valeurs.html
+++ b/src/saar_website/templates/saar_website/valeurs.html
@@ -2,6 +2,13 @@
 
 {% load static %}
 
+{% block title %}Nos valeurs - SAAR Assurances Côte d'Ivoire{% endblock %}
+
+{% block description %}Protégez ce qui compte avec SAAR Assurances. Assurance non-vie et vie en Côte d'Ivoire.{% endblock %}
+
+{% block keywords %}SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, assurance, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
+
+
 {% block content %}
 
       <!-- Header Start -->
