--- a/src/saar_website/templates/saar_website/about_grp_review.html
+++ b/src/saar_website/templates/saar_website/about_grp_review.html
@@ -4,7 +4,7 @@
 
 {% block title %}Groupe SAAR | SAAR Assurances CI{% endblock %}
 
-{% block keywords %} SAAR, Côte d'Ivoire, Abidjan, devis assurance, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
+{% block keywords %} Groupe SAAR, SAAR, Côte d'Ivoire, Abidjan, devis assurance, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
 
 
 {% block content %}
