--- a/src/saar_website/templates/saar_website/contact.html
+++ b/src/saar_website/templates/saar_website/contact.html
@@ -2,6 +2,11 @@
 
 {% load static %}
 
+{% block title %}Contactez Nous - SAAR Assurances Côte d'Ivoire{% endblock %}
+
+{% block keywords %} Contacts, SAAR, Côte d'Ivoire, Abidjan, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
+
+
 {% block content %}
 
      <!-- Header Start -->
