--- a/src/saar_website/templates/saar_website/produits/produit-9.html
+++ b/src/saar_website/templates/saar_website/produits/produit-9.html
@@ -2,11 +2,11 @@
 
 {% load static %}
 
-{% block title %}{{ produit.titre }} - {{ produit.categorie.libelle }} | SAAR Assurances CI{% endblock %}
+{% block title %}{{ produit.titre }} - {{ produit.categorie.libelle }} - SAAR Assurances Côte d'Ivoire{% endblock %}
 
 {% block description %}{{ detail_produit.contenu|safe|truncatewords:30 }} SAAR Assurances, votre partenaire de confiance en Côte d'Ivoire.{% endblock %}
 
-{% block keywords %}{{ produit.titre }}, assurance {{ produit.categorie.libelle }}, SAAR, Côte d'Ivoire, Abidjan, devis assurance, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
+{% block keywords %}{{ produit.titre }}, assurance takaful, takaful, saar takaful, assurance halal, assurance {{ produit.categorie.libelle }}, SAAR, Côte d'Ivoire, Abidjan, devis assurance, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
 
 
 {% block content %}
