--- a/src/saar_website/templates/saar_website/valeurs_review.html
+++ b/src/saar_website/templates/saar_website/valeurs_review.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Nos Valeurs | SAAR Assurances CI{% endblock %}
+{% block title %}Nos Valeurs - SAAR Assurances Côte d'Ivoire{% endblock %}
 
 {% block description %}Chez SAAR Assurances Côte d'Ivoire, nos valeurs ne sont pas de simples mots. Elles constituent l'essence de notre identité et orientent chacune de nos décisions au service de l'excellence.{% endblock %}
 
