--- a/src/saar_website/templates/saar_website/about_grp_review.html
+++ b/src/saar_website/templates/saar_website/about_grp_review.html
@@ -2,9 +2,9 @@
 
 {% load static %}
 
-{% block title %}Groupe SAAR | SAAR Assurances CI{% endblock %}
+{% block title %}Groupe SAAR - SAAR Assurances CI{% endblock %}
 
-{% block keywords %} Groupe SAAR, SAAR, Côte d'Ivoire, Abidjan, devis assurance, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
+{% block keywords %} Groupe SAAR, le groupe SAAR, SAAR, Côte d'Ivoire, Abidjan, devis assurance, SAAR Assurances, SAAR Assurances CI, SAAR Assurances Côte d'Ivoire, SAAR, saar, saar assurance, assurance Côte d'Ivoire, assurance Abidjan, assurance auto CI, assurance santé Abidjan, SAAR assurances, devis assurance gratuit, Top 10 marché Ivoirien{% endblock %}
 
 
 {% block content %}
