--- a/src/saar_website/templates/saar_website/layouts/base.html
+++ b/src/saar_website/templates/saar_website/layouts/base.html
@@ -11,20 +11,20 @@
         </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
          <!-- Mots-clés -->
-        <meta content="{% block keywords %}SAAR, saar, SAAR Assurances, SAAR CI, SAAR VIE, SAAR VIE CI, SAAR Assurances Côte d'Ivoire, SAAR Assurances CI, assurance, assurance auto, assurance santé, assurance habitation, assurance entreprise, assurance Côte d'Ivoire, assurance Abidjan, SAAR Vie Côte d'Ivoire, Top 10 marché Ivoirien{% endblock %}" name="keywords">
+        <meta content="{% block keywords %}SAAR, saar, SAAR Assurances, saar assurance, saar assurances, SAAR CI, SAAR VIE, SAAR VIE CI, SAAR Assurances Côte d'Ivoire, SAAR Assurances CI, assurance, assurance auto, assurance santé, assurance habitation, assurance entreprise, assurance Côte d'Ivoire, assurance Abidjan, SAAR Vie Côte d'Ivoire, Top 10 marché Ivoirien{% endblock %}" name="keywords">
         <!-- Description pour Google -->
-        <meta name="description" content="{% block description %}SAAR Assurances CI, votre partenaire de confiance pour tous vos besoins d'assurance en Côte d'Ivoire.{% endblock %}">
+        <meta name="description" content="{% block description %}SAAR Assurances Côte d'Ivoire, votre partenaire de confiance pour tous vos besoins d'assurance en Côte d'Ivoire.{% endblock %}">
 
         <!-- Auteur et copyright -->
-        <meta name="author" content="SAAR Assurances CI">
+        <meta name="author" content="SAAR Assurances Côte d'Ivoire">
         <meta name="robots" content="index, follow">
         <meta name="language" content="French">
 
         <!-- Open Graph pour Facebook/LinkedIn -->
         <meta property="og:site_name" content="SAAR Assurances Côte d'Ivoire">
-        <meta property="og:title" content="{% block og_title %}SAAR Assurances CI - Protection complète en Côte d'Ivoire{% endblock %}">
+        <meta property="og:title" content="{% block og_title %}SAAR Assurances Côte d'Ivoire - Protection complète en Côte d'Ivoire{% endblock %}">
         <meta property="og:description" content="{% block og_description %}Découvrez nos solutions d'assurance adaptées à vos besoins.{% endblock %}">
-        <meta property="og:image" content="{% block og_image %}https://saarassurancesci.com{% static 'img/logo-saar.png' %}{% endblock %}">
+        <meta property="og:image" content="{% block og_image %}https://saarassurancesci.com{% static 'img/saar_logo_new.jpg' %}{% endblock %}">
         <meta property="og:url" content="https://saarassurancesci.com">
         <meta property="og:type" content="website">
         <meta property="og:locale" content="fr_CI">
@@ -35,10 +35,10 @@
         <meta name="twitter:site" content="@saarassurances">
         <meta name="twitter:title" content="{% block twitter_title %}SAAR Assurances{% endblock %}">
         <meta name="twitter:description" content="{% block twitter_description %}Votre partenaire assurance en Côte d'Ivoire{% endblock %}">
-        <meta name="twitter:image" content="{% block twitter_image %}https://saarassurancesci.com{% static 'img/logo-saar.jpg' %}{% endblock %}">
+        <meta name="twitter:image" content="{% block twitter_image %}https://saarassurancesci.com{% static 'img/saar_logo_new.jpg' %}{% endblock %}">
 
          <!-- Favicons -->
-        <link href="{% static 'img/logo-saar.png' %}" rel="icon" sizes="60x60">
+        <link href="{% static 'img/saar_logo_new.jpg' %}" rel="icon">
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -73,7 +73,7 @@
         "@context": "https://schema.org",
         "@type": "InsuranceAgency",
         "name": "SAAR Assurances",
-        "image": "https://saarassurancesci.com{% static 'img/logo-saar.png' %}",
+        "image": "https://saarassurancesci.com{% static 'img/saar_logo_new.jpg' %}",
         "url": "https://saarassurancesci.com",
         "telephone": "+225-27-22-50-81-50",
         "priceRange": "$$",
