--- a/src/saar_website/templates/saar_website/produits/detail.html
+++ b/src/saar_website/templates/saar_website/produits/detail.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}{{ produit.titre }} - {{ produit.categorie.libelle }} | SAAR Assurances CI{% endblock %}
+{% block title %}{{ produit.titre }} - {{ produit.categorie.libelle }} | SAAR Assurances Côte d'Ivoire{% endblock %}
 
 {% block description %}{{ detail_produit.contenu|safe|truncatewords:30 }} SAAR Assurances, votre partenaire de confiance en Côte d'Ivoire.{% endblock %}
 
